Dodan footer i linkovi na rezervaciju termina i webshop

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <div class="col-md-3 text-center border  rounded" style="background-color: #D9D9D9; border-color: white; padding: 20px">
                 <h2>Rezervacija termina</h2>
                 <p>Odaberite željenu uslugu i rezervirajte svoj termin jednostavnim klikom. Uživajte u profesionalnom tretmanu bez čekanja.</p>
-                <a href="#" class="btn custom-button mx-auto mb-3">Rezervacija termina</a>
-                <a href="#" class="btn custom-button mx-auto">WebShop</a>
+                <a href="rezervacija.html" class="btn custom-button mx-auto mb-3">Rezervacija termina</a>
+                <a href="webshop.html" class="btn custom-button mx-auto">WebShop</a>
             </div>
             <div class="col-md-1 "></div>
             <div class="col-md-8 text-left border rounded" style="background-color: #D9D9D9; border-color: white; padding: 20px">
@@ -141,6 +141,24 @@
             </div>
         </div>
         <br>
+        <footer style="background-color: #f8f9fa; padding: 20px; margin-top: 100px;" >
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>Cut'z by Lenny</h4>
+                        <p>Adresa:</p>
+                        <p> Hektorovićeva 2</p>
+                        <p> 10000 Zagreb</p>
+                        <p>Kontakt broj:  +385 99 365 0710</p>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="map-container">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11125.738060837699!2d15.99246765!3d45.802555600000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d64fb12e7b75%3A0x5dfff4bf68b3dd66!2sHektorovi%C4%87eva%20ul.%202%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1686821635855!5m2!1shr!2shr" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
