--- a/rezervacija.html
+++ b/rezervacija.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css">
     <title>Rezervacija termina</title>
 
     <style>
@@ -34,6 +34,7 @@
             <div class="col-md-10 text-center d-flex flex-column align-items-center justify-content-center">
                 <h2>Rezervirajte svoj termin za šišanje u par jednostavnih koraka.</h2>
                 <p>Popunite formular, odaberite željenu uslugu i termin.</p>
+                <p>Povratak na <a href="index.html">početnu stranicu</a>.</p>
             </div>
             <div class="col-md-2 d-flex align-items-end justify-content-end">
                 <img src="cutz_by_lenny_logo.png" alt="Slika" style="max-width: 100%; max-height: 100%;">
@@ -77,50 +78,88 @@
             </div>
         </div>
         <br>
-        <div class="row" >
+        <div class="row" style="height: 100px;">
             <div class="col-md-6 text-center" style="background-color: #D9D9D9;">
-                <h3>Odaberite željeni datum:</h3>
-                <input type="text" id="daterange" class="form-control">
+                <h3>Odaberite željeni datum i vrijeme:</h3>
+                <input type="text" id="datum-vrijeme" class="form-control">
+            </div>
+            <div class="col-md-6 text-center" style="background-color: #D9D9D9;">
+                <h3>Način plaćanja:</h3>
+                <select id="nacin-placanja" class="form-control">
+                    <option value="gotovina">Gotovina</option>
+                    <option value="kartica">Kartica</option>
+                </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 text-center" style="margin-top:50px">
+                <button type="button" class="btn btn-primary" onclick="procesirajRezervaciju()">Potvrdi rezervaciju</button>
+            </div>
+        </div>
+        <footer style="background-color: #f8f9fa; padding: 20px; margin-top: 500px;">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <h4>Cut'z by Lenny</h4>
+                        <p>Adresa:</p>
+                        <p>Hektorovićeva 2</p>
+                        <p>10000 Zagreb</p>
+                        <p>Kontakt broj: +385 99 365 0710</p>
+                    </div>
+                    <div class="col-md-6">
+                        <div id="map-container">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11125.738060837699!2d15.99246765!3d45.802555600000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d64fb12e7b75%3A0x5dfff4bf68b3dd66!2sHektorovi%C4%87eva%20ul.%202%2C%2010000%2C%20Zagreb!5e0!3m2!1shr!2shr!4v1686821635855!5m2!1shr!2shr" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="potvrdaModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Rezervacija potvrđena</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Vaša rezervacija je uspješno potvrđena.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Zatvori</button>
+                </div>
             </div>
         </div>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap-daterangepicker/daterangepicker.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
     <script>
-        // Pokretanje Date Range Pickera
         $(function() {
-            $('#daterange').daterangepicker({
-                opens: 'left', // Prikaži kalendar s lijeve strane input polja
-                autoUpdateInput: false, // Onemogući automatsko ažuriranje input polja
-                locale: {
-                    cancelLabel: 'Odustani', // Promjena teksta gumba "Odustani"
-                    applyLabel: 'Odaberi', // Promjena teksta gumba "Odaberi"
-                    daysOfWeek: ['Ned', 'Pon', 'Uto', 'Sri', 'Čet', 'Pet', 'Sub'], // Promjena kratkih naziva dana u tjednu
-                    monthNames: [
-                        'Siječanj',
-                        'Veljača',
-                        'Ožujak',
-                        'Travanj',
-                        'Svibanj',
-                        'Lipanj',
-                        'Srpanj',
-                        'Kolovoz',
-                        'Rujan',
-                        'Listopad',
-                        'Studeni',
-                        'Prosinac'
-                    ] // Promjena naziva mjeseci
-                }
-            });
-
-            // Kada je odabran datum, ažurirajte vrijednost input polja
-            $('#daterange').on('apply.daterangepicker', function(ev, picker) {
-                $(this).val(picker.startDate.format('DD.MM.YYYY') + ' - ' + picker.endDate.format('DD.MM.YYYY'));
+            $('#datum-vrijeme').datetimepicker({
+                format: 'd.m.Y H:i',
+                step: 15
             });
         });
+
+        function procesirajRezervaciju() {
+            var načinPlaćanja = document.getElementById("nacin-placanja").value;
+
+            if (načinPlaćanja === "kartica") {
+                // Preusmjeravanje na testnu stranicu za naplatu
+                window.location.href = "https://www.example.com/naplata";
+            } else {
+                // Prikazivanje modalnog prozora s potvrdom rezervacije
+                $('#potvrdaModal').modal('show');
+            }
+        }
     </script>
+
 </body>
 
 </html>
