--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     mišljenje.</p>
             </div>
             <div class="col-md-4 text-center">
-                <a href="#" class="btn custom-button mx-auto">Recenzije i podrška</a>
+                <a href="recenzije.html" class="btn custom-button mx-auto">Recenzije i podrška</a>
             </div>
             <div class="col-md-4 text-center">
                 <p>Imate pitanja ili problema? Naš tim za podršku je ovdje da vam pomogne. Pregledajte našu stranicu za
